...
          destinations: const <Widget>[
            NavigationDestination(
              icon: Icon(CupertinoIcons.home),
              label: 'داشبورد',
            ),
            NavigationDestination(
              key: Key("invoices"),
              icon: Icon(CupertinoIcons.list_bullet_below_rectangle),
              label: 'فاکتورها',
            ),
            NavigationDestination(
              key: Key("customers"),
              icon: Icon(CupertinoIcons.person_2),
              label: 'مشتریان',
            ),
            NavigationDestination(
              icon: Icon(CupertinoIcons.profile_circled),
              label: 'نمایه',
...
