...
                  width: 2,
                ),
              ),
              child: Column(
                children: [
                  AppTextField(
                    key: const Key("invoice customer"),
                    controller: _atfcCustomer,
                    inputType: TextInputType.text,
                    hintText: "مشتری",
                    noBorder: true,
                    width: double.infinity,
                    readOnly: true,
...
class _InvoicesState extends State<Invoices> {
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
      floatingActionButton: FloatingActionButton(
        key: const Key("new invoice"),
        child: const Icon(
          Icons.add_rounded,
        ),
        onPressed: () {
          InvoiceDialog.show(
              context,
...
